@@ -1,3 +1,7 @@
+Tue Aug  9 12:01:27 2005  tjlocal  <timj@imendio.com>
+
+	* autogen.sh: bail out with exit $? for failing programs.
+
 2005-07-26  Damon Chaplin  <damon@gnome.org>
 
 	* gtk-doc.make: Pass DOC_MAIN_SGML_FILE as the main filename to
